# 5802HTF

./: 5802HTF.cabal  CHANGELOG.md  HTF-Test-Talk.cabal  LICENSE  Main.hs  TestBBT.hs  TestHunit.hs  TestHunitPretty.hs  TestMain.hs  TestQC.hs  run.sh
.HTF/: BBT.history  HUnit.history  HUnitPretty.history  Main.history  QC.history  sample-tests.history
Tests/: Asserts.hs  BBT.hs  HUnit.hs  HUnitPretty.hs  ImageConverter.hs  MatrixAdder.hs  QC.hs  TestHistory.hs
app/: Tutorial.hs
bbt-dir/should-pass/: x.out
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
scripts/: runBBT
