name:                HTF-Test-Talk
version:             0.1.0.0
synopsis:            HTF Testing demo
description:         HTF Testing demo
license:             BSD3
license-file:        LICENSE
author:              Connor Antony, Nathaniel Beckman
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

-- executable sample
--   main-is:           Main.hs
--   other-modules:     Tests.Asserts, Tests.ImageConverter
--   build-depends:     base, HTF, JuicyPixels,vector
--   default-language:  Haskell2010
--   build-tool-depends: HTF:htfpp

test-suite Main
  type:              exitcode-stdio-1.0
  main-is:           TestMain.hs
  other-modules:     Tests.MatrixAdder
  build-depends:     base, HTF, vector
  default-language:  Haskell2010
  build-tool-depends: HTF:htfpp

test-suite HUnit
  type:              exitcode-stdio-1.0
  main-is:           TestHunit.hs
  other-modules:     Tests.HUnit,Tests.MatrixAdder
  build-depends:     base, HTF,vector
  default-language:  Haskell2010
  build-tool-depends: HTF:htfpp

test-suite HUnitPretty
  type:              exitcode-stdio-1.0
  main-is:           TestHunitPretty.hs
  other-modules:     Tests.HUnitPretty,Tests.MatrixAdder
  build-depends:     base, HTF,vector
  default-language:  Haskell2010
  build-tool-depends: HTF:htfpp

test-suite BBT
  type:              exitcode-stdio-1.0
  main-is:           TestBBT.hs
  other-modules:     Tests.BBT Tests.MatrixAdder
  build-depends:     base, HTF,vector
  default-language:  Haskell2010
  build-tool-depends: HTF:htfpp

test-suite QC
  type:              exitcode-stdio-1.0
  main-is:           TestQC.hs
  other-modules:     Tests.QC Tests.MatrixAdder
  build-depends:     base, HTF,vector
  default-language:  Haskell2010
  build-tool-depends: HTF:htfpp
